--- a/src/index.html
+++ b/src/index.html
@@ -15,6 +15,8 @@
     </ul>
 </nav>
 
+<div class="preloader"></div>
+
 <div role="main">
     <figure class="vis vis-tracks" data-jsonexport="2-12-2015"></figure>
     <figure class="vis vis-audio"></figure>
