--- a/src/index.html
+++ b/src/index.html
@@ -16,14 +16,24 @@
             <li><a href="/#/audio">Audio</a></li>
             <li><a href="/#/followers">Followers</a></li>
         </ul>
-        <p class="description">In early 2015, <a href="https://en.wikipedia.org/wiki/Aphex_Twin" target="_blank">Aphex Twin</a> began uploading rare and unreleased music to an <a href="https://soundcloud.com/user18081971" target="_blank">anonymous Soundcloud account</a>. By late October he had uploaded 261 tracks, and a <a href="http://user18081971.watmm.com/" target="_blank">fan voting site</a> had appeared to help Aphex Twin himself decide which tracks should get remastered and released traditionally. This visualisation plots fan votes against Soundcloud plays to create a new visual means to explore the archive. </p><p><a href="http://www.twitter.com/tomlongmate" target="_blank"><i>@tomlongmate</i></a></p>
-        <p class="foot"><small><sup>*</sup>Data: Soundcloud/<a href="http://user18081971.watmm.com" target="_blank">user18081971.watmm.com</a> voting site. Built with <a href="http://d3js.org/" target="_blank">D3</a></small></p>
+        <p class="description">In early 2015, <a href="https://en.wikipedia.org/wiki/Aphex_Twin" target="_blank">Aphex Twin</a> began uploading rare and unreleased music to an <a href="https://soundcloud.com/user18081971" target="_blank">anonymous Soundcloud account</a>. By late October he had uploaded 261 tracks, and a <a href="http://user18081971.watmm.com/" target="_blank">fan voting site</a> had appeared to help Aphex Twin himself decide which tracks should get remastered and released traditionally. This visualisation plots fan votes against Soundcloud plays to create a new visual means to explore the archive. </p>
+        <p class="foot"><small>Data: <a href="http://www.soundcloud.com" target="_blank">Soundcloud</a>/<a href="http://user18081971.watmm.com" target="_blank">user18081971.watmm.com</a>/<a href="http://the.echonest.com/">Echonest</a>.</p><p>Designed &amp; built by <a href="http://www.twitter.com/tomlongmate" target="_blank">@tomlongmate</a> with <a href="http://d3js.org/" target="_blank">D3</a>/<a href="https://github.com/shawnbot/d3-cartogram" target="_blank">D3 Cartogram</a> and more.</small></p>
     </section>
 </nav>
 
 <div class="preloader"></div>
 
 <div role="main">
+    <div class="preload-tracks">
+        <div class="html-content">
+            <h1 class="title">user18081971</h1>
+            <h2 class="title">Soundcloud visualisation</h2>
+            <h3 class="title"></h3>
+            <h4 class="title">&nbsp;</h4>
+            <h5 class="title subtitle">//soundcloud.com/user18081971</h5>
+            <h6 class="title subtitle">//user18081971.watmm.com</h6>
+        </div>
+    </div>
     <figure class="vis vis-tracks" data-jsonexport="2-12-2015"></figure>
     <figure class="vis vis-audio" data-defaultid="TRKXYDH1511481533E"></figure>
     <figure class="vis vis-followers"></figure>
