host json on S3. audio preloader

--- a/src/index.html
+++ b/src/index.html
@@ -32,7 +32,7 @@
     </section>
 </nav>
 
-<div class="preloader"></div>
+<div class="preloader"><span></span></div>
 
 <div role="main">
     <div class="preload-tracks">
