svg background size bug (IE)

--- a/src/index.html
+++ b/src/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>user18081971. Soundcloud followers cartogram</title>
+    <title>user18081971. Soundcloud visualisation</title>
     <link href="https://fonts.googleapis.com/css?family=Roboto+Mono:400,700,300" rel="stylesheet" type="text/css">
     <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
