IE map width bug. dual preload issue

--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
         <div class="html-content">
             <h1 class="title">user18081971</h1>
             <h2 class="title">Soundcloud visualisation</h2>
-            <h3 class="title"></h3>
+            <h3 class="title animate"></h3>
             <h4 class="title">&nbsp;</h4>
             <h5 class="title subtitle">//soundcloud.com/user18081971</h5>
             <h6 class="title subtitle">//user18081971.watmm.com</h6>
