relative URLs for github pages

--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
     <section class="info">
         <h1>Visualising<br>user18081971</h1>
         <ul>
-            <li><a href="/#/tracks">Tracks</a></li>
-            <li><a href="/#/audio">Audio</a></li>
-            <li><a href="/#/followers">Followers</a></li>
+            <li><a href="./#/tracks">Tracks</a></li>
+            <li><a href="./#/audio">Audio</a></li>
+            <li><a href="./#/followers">Followers</a></li>
         </ul>
         <p class="description">
             In early 2015, <a href="https://en.wikipedia.org/wiki/Aphex_Twin" target="_blank">Aphex Twin</a> began uploading rare and unreleased music to an <a href="https://soundcloud.com/user18081971" target="_blank">anonymous Soundcloud account</a>. By late October he had uploaded 261 tracks, and a <a href="http://user18081971.watmm.com/" target="_blank">fan voting site</a> had appeared to help Aphex Twin himself decide which tracks should get remastered and released traditionally. Plotting fan votes against Soundcloud plays gives us a new visual means to explore the archive.
