delete extra index file. add github link

--- a/src/index.html
+++ b/src/index.html
@@ -26,7 +26,7 @@
         </p>
         <p>
             <small>
-                Designed &amp; built by <a href="http://www.twitter.com/tomlongmate" target="_blank">@tomlongmate</a> with <a href="http://d3js.org/" target="_blank">D3</a>/<a href="https://github.com/shawnbot/d3-cartogram" target="_blank">D3 Cartogram</a> and more.
+                Designed &amp; built by <a href="http://www.twitter.com/tomlongmate" target="_blank">@tomlongmate</a> with <a href="http://d3js.org/" target="_blank">D3</a>/<a href="https://github.com/shawnbot/d3-cartogram" target="_blank">D3 Cartogram</a> and more. Source code available <a href="https://github.com/amigolargo/afxvis">on Github</a>.
             </small>
         </p>
     </section>
